--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "^3.5.1",
+    "mysql": "latest",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   }
